--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -285,9 +285,6 @@ a:visited {
   color: #6600FF;
 }
 
-a.external {
-  background-position: center right;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(transparent,transparent),url(src/assets/external-link-ltr-icon.svg?b4b84);
-  padding-right: 13px;
+img.external {
+  margin-left: 2px;
 }
